internal/gatewayapi/testdata/tlsroute-with-upstream-config.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: tls
      protocol: TLS
      port: 91
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
tlsRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TLSRoute
  metadata:
    namespace: default
    name: tlsroute-1
    annotations:
      cloud.teleport.dev/upstream-proxy-protocol: "true"
      cloud.teleport.dev/upstream-max-connections: "10000"
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
    hostnames:
    - "foo.com"
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
services:
- apiVersion: v1
  kind: Service
  metadata:
    namespace: default
    name: service-1
  spec:
    clusterIP: 7.7.7.7
    ports:
    - port: 8080
